Got backbutton on Notes to work correctly using Activity

--- a/bICSI/src/main/res/values/strings.xml
+++ b/bICSI/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="cancel_button_text">Cancel</string>
     
     <string name="title_activity_new_meal">Photo Upload</string>
+    <string name="title_activity_new_note">Session Note</string>
     <string name="logintext">If you have a user account for the Photo Gallery, please sign in below. If not, please sign up.</string>
 	<string name="privacylink">View Privacy Policy</string>
 	<string name="uploadwarning">Please tap the Camera icon to take a photo. All photos and comments will be reviewed before being posted to the gallery. Any photos with potential indecency issues will not be posted and your user account will be terminated.</string>
