--- a/bICSI/src/main/res/values/strings.xml
+++ b/bICSI/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="alerts">Alerts</string>
     <string name="social">Photo Gallery</string>
     <string name="myBICSI">My BICSI</string>
+    <string name="myPlanner">My Planner</string>
 	<string name="aboutUs">About Us</string>
 	<string name="version">Version</string>
 	<string name="conference">Conference</string>
